header img scaling issue on mobile adjust

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ header{
 header img{
     width: 70%;
     max-width: 260px;
-    height: fit-content;
+    height: auto;
 }
 
 
